FusionDev Backup1/src/objects/CustomOpportunity__c.object
<CustomObject>
    <description>Custom opportunities object for Omni channel implementation</description>
    <fields>
        <fullName>Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityName</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CustomOpportunities</relationshipLabel>
        <relationshipName>CustomOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerUpdated__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testfield__c</fullName>
        <label>testfield</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CustomOpportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BizDev_CustomOpportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev</label>
        <queue>BizDev</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>CustomOpportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomOpportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>